<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn='navigation_view'>

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_index"
            android:icon="@drawable/ic_home"
            android:title="@string/inicio" />

        <item
            android:id="@+id/nav_agenda"
            android:icon="@drawable/ic_agenda"
            android:title="@string/agenda" />

    </group>

    <item android:title="@string/informa_es">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_us"
                    android:icon="@drawable/ic_us"
                    android:title="@string/quem_somos" />

                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_help"
                    android:title="@string/sobre" />
            </group>
        </menu>
    </item>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_sair"
                android:icon="@drawable/ic_logout"
                android:title="@string/sair" />
        </menu>
    </item>
</menu>